--- a/team7-july2020.ipynb
+++ b/team7-july2020.ipynb
@@ -106,41 +106,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "C:\\Users\\Admin\\Anaconda3\\Lib\\site-packages\\en_core_web_lg\n"
+      "Requirement already satisfied: contractions in c:\\users\\admin\\anaconda3\\lib\\site-packages (0.0.25)\n",
+      "Requirement already satisfied: textsearch in c:\\users\\admin\\anaconda3\\lib\\site-packages (from contractions) (0.0.17)\n",
+      "Requirement already satisfied: pyahocorasick in c:\\users\\admin\\anaconda3\\lib\\site-packages (from textsearch->contractions) (1.4.0)\n",
+      "Requirement already satisfied: Unidecode in c:\\users\\admin\\anaconda3\\lib\\site-packages (from textsearch->contractions) (1.1.1)\n",
+      "Requirement already up-to-date: emot in c:\\users\\admin\\anaconda3\\lib\\site-packages (2.1)\n",
+      "Requirement already satisfied: langdetect in c:\\users\\admin\\anaconda3\\lib\\site-packages (1.0.8)\n",
+      "Requirement already satisfied: six in c:\\users\\admin\\anaconda3\\lib\\site-packages (from langdetect) (1.12.0)\n",
+      "Requirement already satisfied: nltk in c:\\users\\admin\\anaconda3\\lib\\site-packages (3.4.5)\n",
+      "Requirement already satisfied: six in c:\\users\\admin\\anaconda3\\lib\\site-packages (from nltk) (1.12.0)\n",
+      "Requirement already satisfied: advertools in c:\\users\\admin\\anaconda3\\lib\\site-packages (0.10.7)\n",
+      "Requirement already satisfied: pyasn1 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from advertools) (0.4.8)\n",
+      "Requirement already satisfied: pandas in c:\\users\\admin\\anaconda3\\lib\\site-packages (from advertools) (1.1.3)\n",
+      "Requirement already satisfied: scrapy in c:\\users\\admin\\anaconda3\\lib\\site-packages (from advertools) (2.3.0)\n",
+      "Requirement already satisfied: twython in c:\\users\\admin\\anaconda3\\lib\\site-packages (from advertools) (3.8.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from pandas->advertools) (2.8.0)\n",
+      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from pandas->advertools) (2019.3)\n",
+      "Requirement already satisfied: numpy>=1.15.4 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from pandas->advertools) (1.19.2)\n",
+      "Requirement already satisfied: protego>=0.1.15 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from scrapy->advertools) (0.1.16)\n",
+      "Requirement already satisfied: itemloaders>=1.0.1 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from scrapy->advertools) (1.0.3)\n",
+      "Requirement already satisfied: cssselect>=0.9.1 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from scrapy->advertools) (1.1.0)\n",
+      "Requirement already satisfied: queuelib>=1.4.2 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from scrapy->advertools) (1.5.0)\n",
+      "Requirement already satisfied: PyDispatcher>=2.0.5 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from scrapy->advertools) (2.0.5)\n",
+      "Requirement already satisfied: service-identity>=16.0.0 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from scrapy->advertools) (18.1.0)\n",
+      "Requirement already satisfied: cryptography>=2.0 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from scrapy->advertools) (2.7)\n",
+      "Requirement already satisfied: Twisted>=17.9.0 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from scrapy->advertools) (20.3.0)\n",
+      "Requirement already satisfied: zope.interface>=4.1.3 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from scrapy->advertools) (5.1.0)\n",
+      "Requirement already satisfied: lxml>=3.5.0; platform_python_implementation == \"CPython\" in c:\\users\\admin\\anaconda3\\lib\\site-packages (from scrapy->advertools) (4.4.1)\n",
+      "Requirement already satisfied: pyOpenSSL>=16.2.0 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from scrapy->advertools) (19.0.0)\n",
+      "Requirement already satisfied: parsel>=1.5.0 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from scrapy->advertools) (1.6.0)\n",
+      "Requirement already satisfied: itemadapter>=0.1.0 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from scrapy->advertools) (0.1.0)\n",
+      "Requirement already satisfied: w3lib>=1.17.0 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from scrapy->advertools) (1.22.0)\n",
+      "Requirement already satisfied: requests-oauthlib>=0.4.0 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from twython->advertools) (1.3.0)\n",
+      "Requirement already satisfied: requests>=2.1.0 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from twython->advertools) (2.22.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7.3->pandas->advertools) (1.12.0)\n",
+      "Requirement already satisfied: jmespath>=0.9.5 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from itemloaders>=1.0.1->scrapy->advertools) (0.10.0)\n",
+      "Requirement already satisfied: pyasn1-modules in c:\\users\\admin\\anaconda3\\lib\\site-packages (from service-identity>=16.0.0->scrapy->advertools) (0.2.7)\n",
+      "Requirement already satisfied: attrs>=16.0.0 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from service-identity>=16.0.0->scrapy->advertools) (19.2.0)\n",
+      "Requirement already satisfied: asn1crypto>=0.21.0 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from cryptography>=2.0->scrapy->advertools) (1.0.1)\n",
+      "Requirement already satisfied: cffi!=1.11.3,>=1.8 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from cryptography>=2.0->scrapy->advertools) (1.12.3)\n",
+      "Requirement already satisfied: PyHamcrest!=1.10.0,>=1.9.0 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from Twisted>=17.9.0->scrapy->advertools) (2.0.2)\n",
+      "Requirement already satisfied: hyperlink>=17.1.1 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from Twisted>=17.9.0->scrapy->advertools) (20.0.1)\n",
+      "Requirement already satisfied: Automat>=0.3.0 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from Twisted>=17.9.0->scrapy->advertools) (20.2.0)\n",
+      "Requirement already satisfied: incremental>=16.10.1 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from Twisted>=17.9.0->scrapy->advertools) (17.5.0)\n",
+      "Requirement already satisfied: constantly>=15.1 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from Twisted>=17.9.0->scrapy->advertools) (15.1.0)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\admin\\anaconda3\\lib\\site-packages (from zope.interface>=4.1.3->scrapy->advertools) (41.4.0)\n",
+      "Requirement already satisfied: oauthlib>=3.0.0 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from requests-oauthlib>=0.4.0->twython->advertools) (3.1.0)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from requests>=2.1.0->twython->advertools) (3.0.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from requests>=2.1.0->twython->advertools) (2019.9.11)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from requests>=2.1.0->twython->advertools) (2.8)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from requests>=2.1.0->twython->advertools) (1.24.2)\n",
+      "Requirement already satisfied: pycparser in c:\\users\\admin\\anaconda3\\lib\\site-packages (from cffi!=1.11.3,>=1.8->cryptography>=2.0->scrapy->advertools) (2.19)\n"
      ]
     }
    ],
    "source": [
-    "cd C:/Users/Admin/Anaconda3/Lib/site-packages/en_core_web_lg"
+    "!pip install contractions\n",
+    "!pip install emot --upgrade\n",
+    "!pip install langdetect\n",
+    "!pip install nltk\n",
+    "!pip install advertools\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Requirement already up-to-date: emot in c:\\users\\admin\\anaconda3\\lib\\site-packages (2.1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install emot --upgrade"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,31 +336,11 @@
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a"
    },
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'train.csv'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-ec321223085c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# importing the dataset\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtrain\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'train.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mtest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'test.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0msample_submission\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'sample_submission.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[0;32m    684\u001b[0m     )\n\u001b[0;32m    685\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 686\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    687\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    688\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    450\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    451\u001b[0m     \u001b[1;31m# Create the parser.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 452\u001b[1;33m     \u001b[0mparser\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfp_or_buf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    453\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    454\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m    944\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"has_index_names\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"has_index_names\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    945\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 946\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    947\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    948\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[1;34m(self, engine)\u001b[0m\n\u001b[0;32m   1176\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_make_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"c\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1177\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"c\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1178\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCParserWrapper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1179\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1180\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"python\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, src, **kwds)\u001b[0m\n\u001b[0;32m   2006\u001b[0m         \u001b[0mkwds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"usecols\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0musecols\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2007\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2008\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparsers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTextReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2009\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munnamed_cols\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munnamed_cols\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2010\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.__cinit__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._setup_parser_source\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'train.csv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# importing the dataset \n",
     "train = pd.read_csv('train.csv')\n",
-    "test = pd.read_csv('test.csv')\n",
-    "sample_submission = pd.read_csv('sample_submission.csv')\n"
+    "test = pd.read_csv('test.csv')\n"
    ]
   },
   {
